--- a/SwerveRobot/gradle/wrapper/gradle-wrapper.properties
+++ b/SwerveRobot/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
+#Sun Jan 16 13:15:24 EST 2022
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.3.3-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=permwrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.3.3-bin.zip
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=permwrapper/dists
+zipStoreBase=GRADLE_USER_HOME
